# AI-XR-Project

./: .gitattributes  .gitignore  README.md
.github/: pull_request_template.md
BossAIServer/: main.py
Documents/: 타임머신 AR 프로젝트 통합 문서.txt
MechRaid/: MechRaid.slnx  MechRaid.uproject
MechRaid/Config/: DefaultEngine.ini  DefaultGame.ini
MechRaid/Content/: BP_3DMenuBoard.uasset  WBP_CommonButton.uasset  WBP_MainMenu.uasset
MechRaid/Content/FirstPerson/: Lvl_FirstPerson.umap
MechRaid/Source/: MechRaid.Target.cs  MechRaidEditor.Target.cs  MechRaidServer.Target.cs
MechRaid/Source/MechRaid/: MechRaid.Build.cs  MechRaid.cpp  MechRaid.h  MechRaidCameraManager.cpp  MechRaidCameraManager.h  MechRaidCharacter.cpp  MechRaidCharacter.h  MechRaidGameMode.cpp  MechRaidGameMode.h  MechRaidMainMenu.cpp  MechRaidMainMenu.h  MechRaidPlayerController.cpp  MechRaidPlayerController.h
MechRaid/Source/MechRaid/Variant_Horror/: HorrorCharacter.h  HorrorGameMode.h  HorrorPlayerController.cpp  HorrorPlayerController.h
MechRaid/Source/MechRaid/Variant_Shooter/: ShooterCharacter.h  ShooterGameMode.h  ShooterPlayerController.cpp  ShooterPlayerController.h
Server_Core/: CMakeLists.txt  main.cpp
Server_Core/DummyClient/: DummyClient.cpp
Server_Core/Network/: IOCPServer.cpp  IOCPServer.h  LogicQueue.h  RudpChannel.cpp  RudpChannel.h  Session.h  SessionManager.cpp  SessionManager.h
Server_Core/Utils/: GLog.h
Shared/include/: Packets.h
TimeMachineAR/: TimeMachineAR.uproject
TimeMachineAR/Config/: DefaultEngine.ini  DefaultGame.ini
TimeMachineAR/Content/FirstPerson/Blueprints/: BP_FirstPersonCharacter.uasset
TimeMachineAR/Content/FirstPerson/Maps/: FirstPersonMap.umap
TimeMachineAR/Content/Stuff/: BP_DebugPawn.uasset  BP_DinoOverlay.uasset  BP_TestGameMode.uasset  M_Fade.uasset  TestMap_HMD.umap
TimeMachineAR/Content/Stuff/Input/: IMC_DebugPawn.uasset
TimeMachineAR/Content/Stuff/Maps/: TestMap.umap  TestMap_HMD.umap
TimeMachineAR/Content/Stuff/Meshy_AI_Roaring_Tyrannosaurus_0720093448_texture_fbx/: 11-T-Rex_Skeleton_3D_Model_Decimated_Blender_File.uasset  Default_OBJ_002.uasset  Image_0.uasset  (+7 more)
TimeMachineAR/Plugins/MetaXR/: OculusXR.uplugin
TimeMachineAR/Source/: TimeMachineAR.Target.cs  TimeMachineAREditor.Target.cs
TimeMachineAR/Source/TimeMachineAR/: DinoOverlayActor.cpp  DinoOverlayActor.h  TP_PickUpComponent.cpp  TP_PickUpComponent.h  TP_WeaponComponent.cpp  TP_WeaponComponent.h  TimeMachineAR.Build.cs  TimeMachineAR.cpp  TimeMachineARCharacter.cpp  TimeMachineARCharacter.h  TimeMachineARDebugPawn.cpp  TimeMachineARDebugPawn.h  TimeMachineARGameMode.cpp  TimeMachineARGameMode.h  TimeMachineARPlayerController.cpp  TimeMachineARPlayerController.h  TimeMachineARProjectile.cpp  TimeMachineARProjectile.h
TimeMachine_AR/Config/: DefaultEngine.ini  DefaultGame.ini
backend_server/: .env.example  .gitignore  docker-compose.yml
backend_server/app/: main.py
backend_server/app/core/: config.py  db.py
backend_server/app/models/: __init__.py  dinosaur.py  exhibit.py  poi.py  user.py
backend_server/app/routers/: dinosaurs.py  exhibits.py  health.py
backend_server/app/schemas/: dinosaur.py  exhibit.py
backend_server/db/init/: 01_schema.sql
backend_server/docs/: workflow.md
backend_server/docs/specs/: feature-db-postgres-setup.md  feature-fastapi-skeleton.md  feature-seed-data.md
backend_server/scripts/: seed.py
(+87 files in other folders)
